refactor(banner): 배너 패키지 구조 정리
