# src/main/java/edu/handong/csee/histudy/controller/PublicController.java
@@ -2,12 +2,9 @@ package edu.handong.csee.histudy.controller;
 
 import edu.handong.csee.histudy.dto.ActivityMetricsDto;
 import edu.handong.csee.histudy.dto.ActivityTerm;
-import edu.handong.csee.histudy.dto.BannerDto;
 import edu.handong.csee.histudy.dto.TeamRankDto;
 import edu.handong.csee.histudy.service.ActivityMetricsService;
-import edu.handong.csee.histudy.service.BannerService;
 import edu.handong.csee.histudy.service.TeamService;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -21,7 +18,6 @@ public class PublicController {
 
   private final TeamService teamService;
   private final ActivityMetricsService activityMetricsService;
-  private final BannerService bannerService;
 
   @GetMapping("/teams")
   public TeamRankDto getTeams() {
@@ -34,8 +30,4 @@ public class PublicController {
     return activityMetricsService.getActivityMetrics(activityTerm);
   }
 
-  @GetMapping("/banners")
-  public List<BannerDto.PublicBannerInfo> getBanners() {
-    return bannerService.getPublicBanners();
-  }
 }
